--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
       <div class="bg-fixed bg-no-repeat bg-cover bg-top lg:hidden p-5" style="background-image: url('./img/header-cover.jpeg');">
           <h1 class="font-bold uppercase text-2xl w-60 mx-auto bg-indigo-500 rounded-md text-center text-gray-100 mt-10">RR Designs</h1>
           <p class="ml-3 mt-6 text-center text-white">Designs are currently in progress...</p>
-          <p class="text-sm font-light ml-3 mb-10 text-center text-white">Web Design / Graphic Design</p>
+          <p class="text-sm font-light ml-3 mb-10 text-center text-white">Web Design / Graphic Design / Computer Service</p>
       </div>
 
       <div class="border-r-2 lg:w-64 text-center">
@@ -68,7 +68,7 @@
           </div>
           <div class="flex justify-center items-center">
             <svg class="w-6 h-6 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"></path></svg>
-            <p>0955-523-0039</p>
+            <p>0966-550-5693</p>
           </div>
           <div  class="w-44 mx-auto bg-indigo-500 text-white px-1 py-3 rounded-md transition duration-500 ease-in-out hover:bg-indigo-600">
             <a href="https://drive.google.com/file/d/1e56WHO09hlrzxmoafDw-P5Fx3ww9szBa/view">Download my Resume</a>
@@ -102,7 +102,7 @@
 
       <aside class="lg:hidden bg-gray-200 border border-black fixed top-2/4 py-2 rounded-tr-md rounded-br-md">
         <div>
-          <a href="https://www.facebook.com/rrcunanan" target="_blank"><img src="./img/fb.png" class="w-6 mb-3 mx-1"></a>
+          <a href="https://www.facebook.com/rrc29.me" target="_blank"><img src="./img/fb.png" class="w-6 mb-3 mx-1"></a>
         </div>
         <div class="">
           <a href="https://www.twitter.com/_rrc29" target="_blank"><img src="./img/twitter.png" class="w-5 mb-3 mx-1"></a>
@@ -120,7 +120,7 @@
           <div class="bg-fixed bg-no-repeat bg-cover bg-top lg:h-80 p-5" style="background-image: url('./img/header-cover.jpeg');">
             <h1 class="font-bold uppercase text-3xl w-60 mx-auto py-2 bg-indigo-500 rounded-md shadow-xl text-center text-gray-100 mt-20">RR Designs</h1>
             <p class="ml-3 mt-10 text-center text-white">Designs are currently in progress..</p>
-            <p class="text-sm font-light ml-3 mb-20 text-center text-white">Web Design / Graphic Design</p>
+            <p class="text-sm font-light ml-3 mb-20 text-center text-white">Web Design / Graphic Design / Computer Service</p>
           </div>
         </div>
         <div class="p-5 w-11/12 mx-auto" id="about">
@@ -130,12 +130,11 @@
           <div class="float-right w-4 h-1 bg-indigo-500 ml-1 -mt-3"></div>
           <h1 class="bg-indigo-500 text-gray-100 text-xl py-1 w-52 uppercase font-bold text-center mx-auto lg:ml-0 rounded-md mb-3">About Me</h1>
           <p class="p-5 mx-auto text-justify text-sm border border-black rounded-md">
-            My name is Rhodrick Cunanan and I'm currently living in Batangas
-            City, Philippines. I am an aspiring Web Designer/Graphic Designer. I
-            have knowledge in HTML, CSS/SCSS, Tailwind CSS, Javascript,
-            Photoshop, Illustrator, Affinity Designer and some Video Editors.
-            <br /><br />
-            For more information about me, you can view my updated resume <a href="https://drive.google.com/file/d/1e56WHO09hlrzxmoafDw-P5Fx3ww9szBa/view" target="_blank" class="underline text-indigo-500">here</a>.
+            Greetings! <br><br>
+            My name is Rhodrick but I prefer to be called as Rhod or Drick. I am an aspiring Web Designer/Graphic Designer and my skills and knowledge includes HTML, CSS/SCSS, Tailwind CSS, Javascript, Photoshop, Illustrator, Affinity Designer, Video Editing, and Computer (Hardware/Software). I'm currently working as a full-time Service Engineer in one of the biggest local company here in the Philippines. 
+
+            <!-- <br /><br />
+            For more information about me, you can view my updated resume <a href="https://drive.google.com/file/d/1e56WHO09hlrzxmoafDw-P5Fx3ww9szBa/view" target="_blank" class="underline text-indigo-500">here</a>. -->
           </p>
         </div>
         
@@ -169,7 +168,7 @@
                     <h1 class="font-bold uppercase mb-3">RR Designs</h1>
                     <p>My other portfolio layout design using TailWindCSS.</p>
                   <button class="bg-indigo-500 text-white py-1 px-5 rounded-md mt-3 hover:bg-indigo-600">
-                    <a href="https://rrdesigns.netlify.app/" target="_blank">Visit Website</a>
+                    <a href="https://rrdesigns-portfolio.netlify.app/" target="_blank">Visit Website</a>
                   </button>
                 </div>
                 <div class="w-34 mx-auto p-5 text-center border rounded-md">
@@ -190,15 +189,13 @@
             </div>
             <div class="mt-5 sm:w-5/6 border border-black p-5 rounded-md mx-auto shadow-lg">
               <div class="grid grid-flow-row grid-rows-1 md:grid-cols-3 gap-4">
-                <img src="./img/dpmenew.jpg" class="sm:w-4/6 md:w-5/6 mx-auto rounded-md shadow-md">
                 <img src="./img/koonslogo.png" class="sm:w-4/6 md:w-5/6 mx-auto rounded-md shadow-md">
                 <img src="./img/logo1.png" class="sm:w-4/6 md:w-5/6 mx-auto rounded-md shadow-md">
                 <img src="./img/yuris.jpg" class="sm:w-4/6 md:w-5/6 mx-auto rounded-md shadow-md">
-                <img src="./img/batch2020.jpg" class="sm:w-4/6 md:w-5/6 mx-auto rounded-md shadow-md">
-                <img src="./img/batch2020cover.jpg" class="sm:w-4/6 md:w-5/6 mx-auto rounded-md shadow-md">
+                <img src="./img/sova-banner.jpg" class="sm:w-4/6 md:w-4/6 mx-auto md:col-span-3 rounded-md shadow-md">
+                <img src="./img/omen-banner.png" class="sm:w-4/6 md:w-4/6 mx-auto md:col-span-3 rounded-md shadow-md">
                 <img src="./img/coverkpop.jpg" class="sm:w-4/6 md:w-4/6 mx-auto md:col-span-3 rounded-md shadow-md">
                 <img src="./img/ubsgcover1.jpg" class="sm:w-4/6 md:w-4/6 mx-auto md:col-span-3 rounded-md shadow-md">
-                <img src="./img/omen-banner.png" class="sm:w-4/6 md:w-4/6 mx-auto md:col-span-3 rounded-md shadow-md">
               </div>
             </div>
           </div>
